--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
             </a>
             <br />
             <a href="https://www.w3schools.com/sql/" target="_blank">
-                <i class="fa-solid fa-database skillicons fa-5x"><p class="text">SQL</p></i>
+                <i class="fa-brands fa-python skillicons fa-5x"><p class="text">SQL</p></i>
             </a>
             <a href="https://www.tutorialspoint.com/plsql/index.htm" target="_blank">
-                <i class="fa-solid fa-database skillicons fa-5x"><p class="text">PL/SQL</p></i>
+                <i class="fa-brands fa-python skillicons fa-5x"><p class="text">PL/SQL</p></i>
             </a>
             <a href="https://www.w3schools.com/python/" target="_blank">
                 <i class="fa-brands fa-python skillicons fa-5x"><p class="text">PYTHON</p></i>
