--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="align bio">
             <img class="img" src="pic/InShot1.jpg" />
             <h1 class="name">Thenmozhi Nagarajan</h1>
-            <h3 style="color:#888181">Front End Developer</h3>
+            <h3 style="color:#888181">Programmer Analyst</h3>
             <h4 style="color:#888181">Sanmina-sci</h4>
             <div>
                 <a href="mailto:thenmozhipnr@gmail.com" target="_blank">
