--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img class="img" src="pic/InShot1.jpg" />
             <h1 class="name">Thenmozhi Nagarajan</h1>
             <h3 style="color:#888181">Programmer Analyst</h3>
-            <h4 style="color:#888181">Sanmina-sci</h4>
+            <h4 style="color:#888181">Sanmina Tech Services</h4>
             <div>
                 <a href="mailto:thenmozhipnr@gmail.com" target="_blank">
                     <i class="fa fa-envelope icons fa-2x"></i>
@@ -57,9 +57,9 @@
             <h3>BIOGRAPHY:</h3>
 
             <p class="intro">
-                Hi, I’m Thenmozhi Nagarajan, currently working as a Programmer Analyst at Sanmina-SCI Tachnology Private India Limited in the Testing and Oracle Support team.
-                I have a Bachelor of Engineering degree from Dr.Mahalingam College of Engineering & Technology.
-                Aside from work, I am also an open-source enthusiast and have created projects that were listed in GitHub.
+                Hi, I’m Thenmozhi Nagarajan, currently working as a Programmer Analyst at Sanmina Tech Services. As a PROGRAMMER ANALYST with 3 years of experience at Sanmina, I have managed SQL databases using DQL, performing DML operations along with TCL to handle and fix various issues & also builded complex SQL queries. 
+                Looking ahead, my goal is to continue expanding my skill set and take on challenging projects.
+               
             </p>
         </div>
     </section>
@@ -70,11 +70,11 @@
             <h2 class="he2">
                 Graduate Trainee
             </h2>
-            <span><a href="https://www.sanmina.com/locations/chennai/">Sanmina-Sci Private India Limited</a></span>
+            <span><a href="https://www.sanmina.com/locations/chennai/">Sanmina Tech Services</a></span>
             <p class="dur">
                 Duration: Nov 2020 - Nov 2021 / Chennai, India
                 <br />
-                Area of work: SQL loader & Oracle 11 i
+                Area of work: SQL
             </p>
         </div>
 
@@ -84,11 +84,11 @@
             <h2 class="he2">
                 Programmer Analyst
             </h2>
-            <span><a href="https://www.sanmina.com/locations/chennai/" target="_blank">Sanmina-Sci Private India Limited</a></span>
+            <span><a href="https://www.sanmina.com/locations/chennai/" target="_blank">Sanmina Tech Services</a></span>
             <p class="dur">
-                Duration: Nov 2021 - Present / Chennai, India
+                Duration: Nov 2021 - Dec 2023 / Chennai, India
                 <br />
-                Area of work: SQL loader & Oracle 11 i
+                Area of work: SQL
             </p>
         </div>
 
