--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pic/Thenmozhi Nagarajan Resume (4).pdf" target="_blank">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pic/Resume- Thenmozhi.pdf" target="_blank">Resume</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
