--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>BIOGRAPHY:</h3>
 
             <p class="intro">
-                Hi, I’m Thenmozhi Nagarajan & worked as a Programmer Analyst at Sanmina Tech Services. As a PROGRAMMER ANALYST with 3 years of experience at Sanmina, I have managed SQL databases using DQL, performing DML operations along with TCL to handle and fix various issues & also builded complex SQL queries. 
+                Hi, I’m Thenmozhi Nagarajan & worked as a Programmer Analyst at Sanmina Tech Services till 15th Dec' 2023. As a PROGRAMMER ANALYST with 3 years of experience at Sanmina, I have managed SQL databases using DQL, performing DML operations along with TCL to handle and fix various issues & also builded complex SQL queries. 
                 Looking ahead, my goal is to continue expanding my skill set and take on challenging projects.
                
             </p>
